--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "cordova-browser": "^5.0.2",
         "cordova-ios": "^4.5.4",
         "cordova-plugin-whitelist": "^1.3.3",
-        "phaser-ce": "^2.9.4",
+        "phaser-ce": "2.8.3",
         "webfontloader": "^1.6.28"
     },
     "cordova": {
